apps/apps/dev/tekton/tekton-dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: tekton.${INTERNAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: -dashboard
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tekton-dashboard.${INTERNAL_DOMAIN}
  - secretName: tekton-tls-internal
